--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DJANGO_SECRET_KEY='django-insecure--iwo5a5h+p#396wr(k5nth02gq1ecadk=cb_j1dxe7(y2u=qk1'
 DJANGO_ENV=production
+DATABASE_URL=postgresql://postgres.uxedoolsxiawulpebbwg:best_pfm_100!@aws-0-us-west-1.pooler.supabase.com:6543/finance-manager-app
