--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "personal_finance_manager/wsgi.py",
-      "use": "@vercel/python"
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "personal_finance_manager/wsgi.py"
+      "dest": "/$1"
     }
   ]
 }
